--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,9 @@
 </head>
 <body class="bg-dark text-light d-flex flex-column min-vh-100">
 {% include nav.html %}
-{{ content }}
+<main class="flex-grow-1">
+    {{ content }}
+</main>
 {% include footer.html %}
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
